Added data types, started parsing metro data and displaying it in dummy tableview

--- a/H8Z2BL8/H8Z2BL8/Base.lproj/Main.storyboard
+++ b/H8Z2BL8/H8Z2BL8/Base.lproj/Main.storyboard
@@ -13,34 +13,51 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="H8Z2BL8" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RhH-Vq-9Aj">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RhH-Vq-9Aj">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="3Uz-xP-AxM">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3Uz-xP-AxM" id="AfG-S6-UH7">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hWf-gF-sCr">
-                                                    <rect key="frame" x="16" y="11" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hWf-gF-sCr">
+                                                    <rect key="frame" x="16" y="29.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sD4-z7-xgw">
+                                                    <rect key="frame" x="16" y="4.5" width="343" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmJ-bd-Idt">
+                                                    <rect key="frame" x="16" y="55" width="351" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="sD4-z7-xgw" firstAttribute="leading" secondItem="AfG-S6-UH7" secondAttribute="leadingMargin" constant="8" id="3Wt-Um-zd0"/>
+                                                <constraint firstItem="lmJ-bd-Idt" firstAttribute="leading" secondItem="AfG-S6-UH7" secondAttribute="leadingMargin" constant="8" id="HEj-XT-4w7"/>
+                                                <constraint firstItem="hWf-gF-sCr" firstAttribute="top" secondItem="sD4-z7-xgw" secondAttribute="bottom" constant="4" id="LDV-za-OsK"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="sD4-z7-xgw" secondAttribute="trailing" constant="8" id="RR6-1s-Y1g"/>
                                                 <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="hWf-gF-sCr" secondAttribute="trailing" constant="8" id="Sww-jU-qM6"/>
                                                 <constraint firstItem="hWf-gF-sCr" firstAttribute="leading" secondItem="AfG-S6-UH7" secondAttribute="leadingMargin" constant="8" id="XKT-C3-3nX"/>
+                                                <constraint firstItem="lmJ-bd-Idt" firstAttribute="top" secondItem="hWf-gF-sCr" secondAttribute="bottom" constant="4" id="j6q-dg-UVx"/>
                                                 <constraint firstItem="hWf-gF-sCr" firstAttribute="centerY" secondItem="AfG-S6-UH7" secondAttribute="centerY" id="v9Q-aD-fFb"/>
+                                                <constraint firstAttribute="trailing" secondItem="lmJ-bd-Idt" secondAttribute="trailing" constant="8" id="vKx-bs-Hok"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -60,6 +77,7 @@
                         <outlet property="table" destination="RhH-Vq-9Aj" id="bUR-YX-s1l"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="752.79999999999995" y="-588.75562218890559"/>
         </scene>
